Initial commit full abc solution refactorings concerning realtime (untested, low risk) remove made-easy module switching to ABC from propriatairy, using SOUNDEX over custom hash Init commit tag separation (db setup,views)